# CppProcessScheduler

./: .gitignore  CMakeLists.txt  main.cpp
data/: SimulationSpecs.cpp  SimulationSpecs.h  Task.cpp  Task.h
managers/: CpuManager.cpp  CpuManager.h  JsonManager.cpp  JsonManager.h  SimulationManager.cpp  SimulationManager.h
